# kindle-mtp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: architect.yaml  implementer.yaml  reviewer.yaml  tester.yaml
.claude/commands/: check-spec.md
docs/: architecture.md  spec.md
docs/decisions/: 000-template.md  001-mtp-library-choice.md
src/: error.rs  lib.rs  main.rs  tui.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: info.rs  ls.rs  mod.rs  pull.rs  status.rs
src/device/: kindle.rs  mod.rs
